# selenium_example

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  poetry.toml  production.yaml  pyproject.toml
app/: __init__.py
app/configuration/: __init__.py  server.py
app/internal/pkg/middlewares/: handle_http_exceptions.py
app/internal/repository/postgresql/: __init__.py  cities.py  reports.py  sites.py  vectors.py
app/internal/routes/: __init__.py  controller.py  data_generator.py
app/internal/services/: __init__.py  cities.py  definer.py  reports.py  sites.py  vectors.py  xml_parser.py
app/internal/workers/: __init__.py  celery_worker.py  checker.py  example1.py  example2.py  generator.py  link_former.py  site_validator.py
app/pkg/connectors/: __init__.py
app/pkg/logger/: logger.py
app/pkg/models/: __init__.py  checker.py  cities.py  config_data.py  reports.py  sites.py  status_data.py  vectors.py  xml_parser.py
app/pkg/models/base/: __init__.py
app/pkg/models/core/: containers.py
app/pkg/models/exceptions/: repository.py  x_auth_token.py
app/pkg/models/types/: __init__.py
app/pkg/settings/: settings.py
migrations/: 20230127_01_PzqgT-create-cities.py  20230127_02_NOTjd-create-table-vectors.py  20230201_01_jwoVw-create-table-reports.py  20230209_01_toeC0-create-sites-table.py
scripts/: migrate.py
tests/fixtures/: settings.py
tests/fixtures/repository/postgresql/: user.py
tests/fixtures/router/: responses.py
tests/types/: responses.py
